app-deployment.yaml
# mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mongodb
  template:
    metadata:
      labels:
        db: mongodb
    spec:
      containers:
      - name: mongo-container
        image: mongo:7.0
        ports:
        - containerPort: 27017
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-pvc



---
# mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  type: ClusterIP
  selector:
    db: mongodb
  ports:
  - port: 27017
    targetPort: 27017


---

# react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: edmonp173/project_app:react1
        ports:
        - containerPort: 80

---
# react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort

---
# fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: edmonp173/project_app:backend
        ports:
        - containerPort: 8000
        
---
# fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
