services.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: app
spec:
  selector:
    app: mongo-python
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: app
spec:
  selector:
    app: react-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
