mongo-python-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-python-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: mongo-python
  policyTypes:
  - Ingress
